# alias-url

./: .gitignore  README.md  Taskfile.yml
.github/workflows/: backend-ci.yml  benchmark.yml  frontend-ci.yml
bench/: README.md  Taskfile.yml
bench/k6/lib/: aliases.ts  checks.ts  config.ts  status-metrics.ts
bench/k6/scenarios/: create-conflict.ts  create-existing.ts  create.ts  health.ts  redirect.ts
bench/k6/setup/: seed-aliases.ts  warmup-create.ts  warmup-redirect.ts
bench/scripts/: bulk-seed.mjs  compare-results.mjs  generate-report-svg.mjs  generate-seed-csv.mjs  run-benchmark-flow.mjs  run-seed.mjs
frankenphp/: Caddyfile
frontend/: .env.example  Taskfile.yml  index.html  pnpm-lock.yaml
frontend/src/: main.ts  style.css
mysql/init/: 001_create_aliases.sql
variants/distributed/: ARCHITECTURE.md  README.md  Taskfile.yml  compose.redirect-direct.yaml  compose.yaml
variants/distributed/backend/: .env.example  .php-cs-fixer.php  Caddyfile  Caddyfile.redirect  Dockerfile  Dockerfile.redirect  Taskfile.yml  composer.json  phpstan.neon  phpunit.xml.dist
variants/distributed/gateway/: Caddyfile  api.nginx.conf  nginx.conf  redirect.nginx.conf
variants/simple/: ARCHITECTURE.md  Taskfile.yml  compose.caddy.yaml  compose.direct.yaml  compose.yaml
variants/simple-rs/: ARCHITECTURE.md  Taskfile.yml  compose.yaml
variants/simple-rs/backend/: .env.example  Cargo.toml  Dockerfile  Taskfile.yml
variants/simple-rs/backend/src/: main.rs
variants/simple/backend/: .env.example  Caddyfile  Dockerfile  Taskfile.yml  composer.json  phpunit.xml.dist
(+63 files in other folders)
